monitoring/prometheus-tls/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana-internal
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
    grafana-endpoint: internal-https
spec:
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
  ports:
    - name: https-internal
      port: 3001
      targetPort: 3001
      protocol: TCP
