monitoring/prometheus-tls/gateway-03.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-kibana
      port: 443
      protocol: TLS
      hostname: kibana.example.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: https-prometheus
      hostname: prometheus.example.com
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: https-alertmanager
      hostname: alertmanager.example.com
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: https-grafana
      hostname: grafana.example.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
            namespace: monitoring
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kube-system-to-grafana-tls
  namespace: monitoring
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: kube-system
  to:
  - group: ""
    kind: Secret
    name: grafana-tls
