monitoring/prometheus-tls/gateway-04.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hostnames:
  - prometheus.example.com
  parentRefs:
  - name: example-gateway
    namespace: kube-system
    sectionName: https-prometheus
  rules:
  - backendRefs:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
  - name: example-gateway
    namespace: kube-system
    sectionName: https-alertmanager
  hostnames:
  - alertmanager.example.com
  rules:
  - backendRefs:
    - name: prometheus-kube-prometheus-alertmanager
      port: 9093
